; ModuleID = '/home/carl/AnghaBench/libevent/test/extr_regress_buffer.c_test_evbuffer_expand_overflow.c'
source_filename = "/home/carl/AnghaBench/libevent/test/extr_regress_buffer.c_test_evbuffer_expand_overflow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evbuffer = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"1\00", align 1
@EVBUFFER_CHAIN_MAX = common dso_local global i32 0, align 4
@EV_SIZE_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @test_evbuffer_expand_overflow to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_evbuffer_expand_overflow(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.evbuffer*, align 8
  store i8* %0, i8** %2, align 8
  %4 = call %struct.evbuffer* (...) @evbuffer_new()
  store %struct.evbuffer* %4, %struct.evbuffer** %3, align 8
  %5 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %6 = call i32 @evbuffer_add(%struct.evbuffer* %5, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 1)
  %7 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %8 = load i32, i32* @EVBUFFER_CHAIN_MAX, align 4
  %9 = call i32 @evbuffer_expand(%struct.evbuffer* %7, i32 %8)
  %10 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %11 = call i32 @evbuffer_validate(%struct.evbuffer* %10)
  %12 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %13 = load i32, i32* @EV_SIZE_MAX, align 4
  %14 = call i32 @evbuffer_expand(%struct.evbuffer* %12, i32 %13)
  %15 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %16 = call i32 @evbuffer_validate(%struct.evbuffer* %15)
  br label %17

17:                                               ; preds = %1
  %18 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %19 = call i32 @evbuffer_free(%struct.evbuffer* %18)
  ret void
}

declare dso_local %struct.evbuffer* @evbuffer_new(...) #1

declare dso_local i32 @evbuffer_add(%struct.evbuffer*, i8*, i32) #1

declare dso_local i32 @evbuffer_expand(%struct.evbuffer*, i32) #1

declare dso_local i32 @evbuffer_validate(%struct.evbuffer*) #1

declare dso_local i32 @evbuffer_free(%struct.evbuffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
